[project]
name = "runpls"
version = "0.1.0"
description = "Command orchestrator-inator"
authors = [
    {name = "Will Vincent L. Parrone",email = "knownbutnotloved@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
